# wikibee

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  README.md  extract.py  noxfile.py  pyproject.toml  requirements.txt  setup.cfg
.gemini/: GEMINI.md  config.yaml  styleguide.md
.github/: pull_request_template.md
.github/workflows/: python-tests.yml  release-binaries.yml  release.yml
docs/: README.md  quickstart.md
docs/contributing/: development.md
docs/guides/: examples.md
docs/reference/: cli-reference.md  configuration.md  troubleshooting.md
docs/tutorial/: api-usage.md  basic-usage.md
scripts/: run_precommit_checks.sh  smoke_extract.py
tests/: test_cli_integration.py  test_config.py  test_config_integration.py  test_config_model.py  test_entrypoint.py  test_extract.py  test_extract_extra.py  test_formatting_split.py  test_metadata.py  test_package_exports.py  test_pick.py  test_search.py  test_services_output.py  test_services_search.py  test_services_tts.py  test_tts_normalizer.py  test_tts_openai.py
wiki_extractor/: __init__.py  __main__.py  cli.py  client.py  formatting.py  tts_normalizer.py  tts_openai.py
wikibee/: __main__.py  cli.py  client.py  config.py  formatting.py  tts_normalizer.py  tts_openai.py  types.py
wikibee/commands/: __init__.py  config.py  extract.py
wikibee/services/: __init__.py  output.py  search.py  tts.py
