[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki_extractor"
version = "0.1.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "inflect>=6.0",
    "num2words>=0.5.0",
    "openai>=1.0.0",
    "requests>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "requests-mock>=1.11.0",
    "ruff>=0.0.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
wiki-extractor = "wiki_extractor.cli:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Move legacy top-level options here to satisfy newer ruff versions
select = ["E", "F", "W", "C"]
